--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "author": "lemon",
   "license": "ISC",
-  "devDependencies": {
-    "bagpipe": "^0.3.5"
-  },
+  "devDependencies": {},
   "dependencies": {
     "chalk": "^2.4.2"
   }
